--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,4 @@
 [deps]
+DotEnv = "4dc1fcf4-5e3b-5448-94ab-0c38ec0385c1"
 MySQL = "39abe10b-433b-5dbd-92d4-e302a9df00cd"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
