AHP-TOPSIS for hajj waiting list

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,7 @@
+APP_ENV = "test" # test|hajj
+ALT_GROUP = "19" # provinsi_id|all
 MYSQL_HOST = "host"
 MYSQL_USER = "user"
 MYSQL_PASSWORD = "pass"
 MYSQL_DATABASE = "db_name"
+MYSQL_DATABASE_TEST = "db_name_test"
